--- a/sakfy6_hw1/src/Makefile
+++ b/sakfy6_hw1/src/Makefile
@@ -12,7 +12,7 @@ hw1.o:	hw1.cpp
 	g++ ${OTHER_FLAGS} -Werror -Wall -c hw1.cpp
 
 MatrixMultiply.o : MatrixMultiply.hpp MatrixMultiply.cpp
-	g++ ${OTHER_FLAGS} -Werror -Wall -c MatrixMultiply.cpp
+	g++ -O3 ${OTHER_FLAGS} -Werror -Wall -c MatrixMultiply.cpp
 
 clean:
 	rm -f *.o hw1
