testing the local i scope for child procs

--- a/ipc_shared_memory/CMakeLists.txt
+++ b/ipc_shared_memory/CMakeLists.txt
@@ -7,5 +7,5 @@ add_library(vectorMatch src/vectorMatch.cpp)
 add_library(parser src/parser.cpp)
 
 add_executable(runner test/runner.cpp)
-target_link_libraries(runner parser parser)
+target_link_libraries(runner parser vectorMatch)
 
