--- a/ipc_shared_memory/CMakeLists.txt
+++ b/ipc_shared_memory/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required (VERSION 2.8)
 project (ipcSharedMemory)
 
-set(CMAKE_CXX_FLAGS "--std=c++11 -O3 -Werror")
+set(CMAKE_CXX_FLAGS "--std=c++11 -Werror")
 
 add_library(vectorMatch src/vectorMatch.cpp)
 add_library(parser src/parser.cpp)
