set checks in cmake for mac to use gcc4.9

--- a/thread_vector_compare/CMakeLists.txt
+++ b/thread_vector_compare/CMakeLists.txt
@@ -1,7 +1,14 @@
 cmake_minimum_required (VERSION 2.8)
 project (ipcSharedMemory)
 
-set(CMAKE_CXX_COMPILER "g++-4.9")
+IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+    MESSAGE(STATUS "Building with gcc-4.9 since your using a mac and that makes things hard")
+    set(CMAKE_CXX_COMPILER "g++-4.9")
+ENDIF()
+
+IF(${CMAKE_SYSTEM_NAME} MATCHES "linux")
+    MESSAGE(STATUS "Good choice in operating system Sr. continue doing what your doing")
+ENDIF()
 
 set(CMAKE_CXX_FLAGS "--std=c++11 -O2 -Werror")
 
