--- a/thread_vector_compare/CMakeLists.txt
+++ b/thread_vector_compare/CMakeLists.txt
@@ -10,6 +10,12 @@ IF(${CMAKE_SYSTEM_NAME} MATCHES "linux")
     MESSAGE(STATUS "Good choice in operating system Sr. continue doing what your doing")
 ENDIF()
 
+
+find_package(OpenMP)
+IF(OPENMP_FOUND)
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+ENDIF()
+
 set(CMAKE_CXX_FLAGS "--std=c++11 -O2 -Werror")
 
 add_library(vectorMatch src/vectorMatch.cpp)
