--- a/thread_vector_compare/CMakeLists.txt
+++ b/thread_vector_compare/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required (VERSION 2.8)
-project (ipcSharedMemory)
+project (threadVectorCompare)
+
 
 IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
     MESSAGE(STATUS "Building with gcc-4.9 since your using a mac and that makes things hard")
@@ -13,7 +14,7 @@ ENDIF()
 
 find_package(OpenMP)
 IF(OPENMP_FOUND)
-    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
 ENDIF()
 
 set(CMAKE_CXX_FLAGS "--std=c++11 -pthread -Werror")
