--- a/thread_vector_compare/CMakeLists.txt
+++ b/thread_vector_compare/CMakeLists.txt
@@ -18,7 +18,7 @@ IF(OPENMP_FOUND)
     set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
 ENDIF()
 
-set(CMAKE_CXX_FLAGS "--std=c++11 -pthread -D POSITION=$(pos) -Werror")
+set(CMAKE_CXX_FLAGS "--std=c++11 -O2 -pthread -D POSITION=$(pos) -Werror")
 
 add_library(vectorMatch src/vectorMatch.cpp)
 add_library(parser src/parser.cpp)
